--- a/index.html
+++ b/index.html
@@ -5,54 +5,69 @@
 <title>Minecraft Skin Viewer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Minecraft-style font -->
+<!-- Pixel font -->
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 <style>
 html, body {
   margin: 0;
-  padding: 0;
   height: 100%;
-  background: #0f0f14;
+  background: radial-gradient(circle at top, #14141f, #0b0b12);
   color: white;
   font-family: "Press Start 2P", monospace;
+  overflow: hidden;
 }
 
 #ui {
   position: absolute;
   top: 20px;
   left: 20px;
-  width: 280px;
-  background: #1b1b23;
-  border: 4px solid #3a3a4f;
+  width: 300px;
   padding: 16px;
-  box-shadow: 0 0 0 4px #000 inset;
+  background: rgba(30, 30, 45, 0.75);
+  backdrop-filter: blur(14px);
+  border-radius: 14px;
+  border: 1px solid rgba(255,255,255,0.08);
+  box-shadow: 0 10px 40px rgba(0,0,0,0.45);
 }
 
 h1 {
   font-size: 12px;
   margin-bottom: 16px;
   text-align: center;
+  letter-spacing: 1px;
 }
 
 button, input[type="file"] {
   width: 100%;
+  padding: 12px;
   margin-bottom: 10px;
-  padding: 10px;
-  background: #2d2d3d;
-  border: 3px solid #555;
+  background: linear-gradient(180deg, #3a3a55, #2a2a40);
+  border: none;
+  border-radius: 10px;
   color: white;
-  cursor: pointer;
   font-family: inherit;
   font-size: 10px;
+  cursor: pointer;
+  transition: transform 0.15s ease, background 0.15s ease;
 }
 
 button:hover {
-  background: #3b3b52;
+  transform: translateY(-1px);
+  background: linear-gradient(180deg, #4a4a6b, #32324a);
 }
 
-label {
+.toggle {
+  display: flex;
+  align-items: center;
+  gap: 10px;
   font-size: 9px;
+  margin-top: 8px;
+}
+
+input[type="checkbox"] {
+  transform: scale(1.2);
+  cursor: pointer;
 }
 
 canvas {
@@ -71,10 +86,15 @@ canvas {
   <button id="toggleOuter">Toggle Outer Layer</button>
   <button id="resetCam">Reset Camera</button>
 
-  <label>
+  <div class="toggle">
     <input type="checkbox" id="autoRotate" checked>
-    Auto Rotate
-  </label>
+    <label for="autoRotate">Auto Rotate</label>
+  </div>
+
+  <div class="toggle">
+    <input type="checkbox" id="toggleWalk" checked>
+    <label for="toggleWalk">Walking Animation</label>
+  </div>
 </div>
 
 <canvas id="viewer"></canvas>
@@ -82,29 +102,33 @@ canvas {
 <!-- Three.js -->
 <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
 
-<!-- Skin renderer -->
+<!-- SkinView3D -->
 <script src="https://unpkg.com/skinview3d@3.0.1/bundles/skinview3d.bundle.js"></script>
 
 <script>
 const canvas = document.getElementById("viewer");
 
 const skinViewer = new skinview3d.SkinViewer({
-  canvas: canvas,
+  canvas,
   width: window.innerWidth,
-  height: window.innerHeight,
-  skin: null
+  height: window.innerHeight
 });
 
-skinViewer.camera.position.set(30, 15, 30);
+// Camera setup
+skinViewer.camera.position.set(28, 14, 28);
 skinViewer.fov = 45;
 skinViewer.zoom = 0.9;
 
+// Controls
 skinViewer.controls.enableZoom = true;
 skinViewer.controls.enablePan = false;
 skinViewer.controls.enableRotate = true;
+skinViewer.controls.autoRotate = true;
 
-skinViewer.animation = new skinview3d.RunningAnimation();
-skinViewer.animation.speed = 0.6;
+// Walking animation
+const walkAnim = new skinview3d.WalkingAnimation();
+walkAnim.speed = 0.6;
+skinViewer.animation = walkAnim;
 
 // Resize handler
 window.addEventListener("resize", () => {
@@ -117,34 +141,41 @@ document.getElementById("skinUpload").addEventListener("change", e => {
   if (!file) return;
 
   const reader = new FileReader();
-  reader.onload = () => {
-    skinViewer.loadSkin(reader.result);
-  };
+  reader.onload = () => skinViewer.loadSkin(reader.result);
   reader.readAsDataURL(file);
 });
 
-// Toggle outer layer
-let outerVisible = true;
+// ✅ WORKING outer layer toggle
+let outerEnabled = true;
 document.getElementById("toggleOuter").onclick = () => {
-  outerVisible = !outerVisible;
-  skinViewer.playerObject.skin.visible = true;
-  skinViewer.playerObject.cape.visible = false;
+  outerEnabled = !outerEnabled;
+  const p = skinViewer.playerObject;
+  if (!p) return;
 
-  skinViewer.playerObject.getOuterLayer().visible = outerVisible;
+  [
+    p.head.outerLayer,
+    p.body.outerLayer,
+    p.leftArm.outerLayer,
+    p.rightArm.outerLayer,
+    p.leftLeg.outerLayer,
+    p.rightLeg.outerLayer
+  ].forEach(layer => layer.visible = outerEnabled);
 };
 
 // Reset camera
 document.getElementById("resetCam").onclick = () => {
-  skinViewer.camera.position.set(30, 15, 30);
+  skinViewer.camera.position.set(28, 14, 28);
   skinViewer.controls.update();
 };
 
-// Auto rotate
-const autoRotateCheckbox = document.getElementById("autoRotate");
-skinViewer.controls.autoRotate = true;
+// Auto rotate toggle
+document.getElementById("autoRotate").addEventListener("change", e => {
+  skinViewer.controls.autoRotate = e.target.checked;
+});
 
-autoRotateCheckbox.addEventListener("change", () => {
-  skinViewer.controls.autoRotate = autoRotateCheckbox.checked;
+// Walking animation toggle
+document.getElementById("toggleWalk").addEventListener("change", e => {
+  skinViewer.animation = e.target.checked ? walkAnim : null;
 });
 </script>
 
